# music

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  bun.lockb  diesel.toml  docker-compose-dev.yml  docker-compose-local.yml  docker-compose.yml  next.config.mjs  package-lock.json  package.json  start.ts  tailwind.config.ts  turbo.json
.github/workflows/: cargo-check.yml  publish-ghcr.yml  web-check.yml
.github/workflows/rust/: cargo-check.yml
app/: ClientAuth.tsx  globals.css  layout.tsx  page.tsx
app/api/auth/changePassword/: route.ts
app/api/auth/createUser/: route.ts
app/profile/[username]/: page.tsx
app/register/: page.tsx
apps/backend/: Cargo.toml
apps/backend/migrations/2024-07-21-200400_music/: down.sql  up.sql
apps/backend/src/: main.rs
apps/backend/src/routes/: album.rs  artist.rs  authentication.rs  mod.rs  music.rs  song.rs
apps/backend/src/structures/: structures.rs
apps/backend/src/utils/: compare.rs  format.rs  hash.rs  metadata.rs  mod.rs  websocket.rs
apps/backend/src/utils/database/: mod.rs  models.rs
apps/docs/: mdx-components.tsx  package.json  tailwind.config.js  tsconfig.json
apps/docs/app/: layout.config.tsx  layout.tsx  page.tsx
apps/docs/app/(home)/: page.tsx
apps/docs/app/docs/: layout.tsx
apps/docs/components/: button.tsx  carousel.tsx
apps/docs/content/docs/: index.mdx  meta.json
apps/landing/: astro.config.mjs  package.json  tailwind.config.js
apps/landing/src/components/: Navbar.tsx
apps/landing/src/layout/: layout.astro
apps/landing/src/pages/: index.astro
apps/web/: .gitignore  next.config.mjs  package.json  postcss.config.js  tailwind.config.js  tailwind.config.ts  tsconfig.json
apps/web/actions/: AddSongToPlaylist.ts  GetPlaylist.ts  GetPlaylists.ts  ImageToBase64.ts
apps/web/actions/Authentication/: ChangePassword.ts
apps/web/actions/Caching/: Revalidate.ts
apps/web/actions/Config/: getConfig.ts
apps/web/actions/Filesystem/: List.ts
apps/web/actions/Friends/: Follow.ts  GetActivity.ts
apps/web/actions/History/: GetListenHistory.ts
apps/web/actions/Player/: AddSongToHistory.ts  SetBitrate.ts  SetNowPlaying.ts
apps/web/actions/Playlist/: CreatePlaylist.ts  DeletePlaylist.ts
apps/web/actions/Search/: AddSearchHistory.ts  DeleteItemFromSearchHistory.ts  GetLastSearchedQueries.ts
apps/web/actions/System/: GetIpAddress.ts  GetPort.ts
apps/web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/app/(admin)/: layout.tsx
apps/web/app/(app)/: layout.tsx  main-layout.tsx  page.tsx
apps/web/app/(dashboard)/: layout.tsx
apps/web/app/(unprotected)/: layout.tsx  page.tsx
apps/web/app/login/: layout.tsx  page.tsx
apps/web/app/profile/: page.tsx
apps/web/app/search/: loading.tsx  page.tsx
apps/web/app/settings/: page.tsx
apps/web/app/setup/: layout.tsx  page.tsx
apps/web/backend/: Cargo.toml  README.md  send.js  websocket.js
apps/web/backend/src/: main.rs
apps/web/backend/src/routes/: album.rs  artist.rs  image.rs  mod.rs  music.rs  search.rs  song.rs
apps/web/backend/src/structures/: structures.rs
apps/web/backend/src/utils/: compare.rs  config.rs  format.rs  hash.rs  library.rs  metadata.rs  mod.rs  websocket.rs
apps/web/components/AI/: AIOverlayContext.tsx  AIPanel.tsx
apps/web/components/Artist/: SongsInLibrary.tsx
apps/web/components/Authentication/: AuthMiddleware.ts  ClientAuth.tsx  Register.tsx
apps/web/components/Description/: Description.tsx
apps/web/components/FileBrowser/: FileBrowser.tsx
apps/web/components/Friends/: FollowButton.tsx  FriendActivity.tsx
apps/web/components/Home/: FromYourLibrary.tsx  LandingCarousel.tsx  ListenAgain.tsx  MusicVideos.tsx  PopularGenres.tsx  RandomSongs.tsx  RecentlyAddedAlbums.tsx  RecommendedAlbums.tsx  ScrollButtons.tsx  SimilarTo.tsx  TopArtists.tsx
apps/web/components/Hooks/: useMediaQuery.tsx
apps/web/components/Icons/: ArrowPath.tsx  CheckCircle.tsx  IconGoToArtist.tsx  IconPlus.tsx  IconQueue.tsx  Pause.tsx  Play.tsx  SpeakerWave.tsx  SpeakerXMark.tsx
apps/web/components/Layout/: CustomiseFeed.tsx  GenreButtons.tsx  LibraryButtons.tsx  Navbar.tsx  PageGradient.tsx  Playlists.tsx  Sidebar.tsx  SplashScreen.tsx  TopGradient.tsx
apps/web/components/Lyrics/: LyricsOverlay.tsx  LyricsOverlayContext.tsx
apps/web/components/Music/: EditSongDialog.tsx  (+7 more)
apps/web/electron/: main.js
apps/web/prisma/: prisma.ts  schema.prisma  seed.ts
apps/web/public/: manifest.json  music.json
apps/web/src-tauri/: tauri.conf.json
apps/web/types/: next-auth.d.ts
apps/web/websocket/: send.js  websocket.js
backend/src/: main.rs
backend/src/routes/: mod.rs  music.rs
backend/src/structures/: structures.rs
backend/src/utils/: format.rs
components/Authentication/: ClientAuth.tsx  Register.tsx
components/Icons/: ArrowUpCircle.tsx  Bars3Left.tsx  PlusCircle.tsx
components/Music/: ListAlbums.tsx  Player.tsx  SongContextMenu.tsx  usePlayer.tsx
components/ui/: sonner.tsx
crates/backend/: Cargo.toml
crates/backend/migrations/2024-07-21-200400_music/: down.sql  up.sql
crates/backend/src/: main.rs
crates/backend/src/routes/: album.rs  artist.rs  authentication.rs  database.rs  filesystem.rs  genres.rs  image.rs  index.rs  mod.rs  music.rs  playlist.rs  search.rs  server.rs  social.rs  song.rs  user.rs  web.rs
crates/backend/src/structures/: structures.rs
crates/backend/src/utils/: compare.rs  config.rs  format.rs  format_test.rs  globals.rs  hash.rs  library.rs  metadata.rs  mod.rs  websocket.rs
crates/backend/src/utils/database/: database.rs  mod.rs  models.rs  schema.rs
docker/: Dockerfile.backend  Dockerfile.frontend
docker/development/: Dockerfile.backend  Dockerfile.frontend
docker/production/: Dockerfile.backend  Dockerfile.frontend
lib/Authentication/: AuthOptions.ts
lib/Authentication/Sessions/: GetServerSession.tsx  SessionProvider.tsx
prisma/: schema.prisma  seed.ts
(+138 files in other folders)
