[package]
name = "music-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.7.0"
actix-session = { version = "0.9.0", features = ["cookie-session"]}
actix-ws = "0.2.5"
actix-rt = "2.10.0"
actix-identity = "0.7.1"
actix-web-httpauth = "0.8.2"
argon2 = "0.5.3"
jsonwebtoken = "9.3.0"
audiotags = "0.5"
chrono = "0.4.38"
dotenvy = "0.15.0"
diesel = { version = "2.1.0", features = ["chrono"]}
diesel-async = { version = "0.5.0", features = ["sqlite"] }
fancy-regex = "0.13.0"
image = "0.25.1"
lofty = "0.18.2"
rayon = "1.8.0"
rand = "0.8.5"
regex = "1.10.3"
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.36.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
futures = "*"
tokio-util = "*"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
walkdir = "2.4.0"
