[package]
name = "music-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
audiotags = "0.5"
rayon = "1.8.1"
regex = "1.10.3"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.36.0", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
walkdir = "2.4.0"
