[package]
name = "music-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
audiotags = "0.5"
fancy-regex = "0.13.0"
lofty = "0.18.2"
rayon = "1.8.0"
regex = "1.10.3"
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.36.0", features = ["full"] }
futures = "*"
tokio-util = "*"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
walkdir = "2.4.0"
